k8s/app.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: pc-builder
  namespace: pc-builder

spec:
  replicas: 1

  selector:
    matchLabels:
      app: pc-builder

  template:
    metadata:
      labels:
        app: pc-builder

    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker

      containers:
        - name: pc-builder
          image: ghcr.io/vidga1/pc-builder:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000
