k8s/postgres.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: pc-builder

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres
  namespace: pc-builder

spec:
  serviceName: postgres
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      nodeSelector:
        kubernetes.io/hostname: k8s-worker

      containers:
        - name: postgres
          image: postgres:15

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U "$POSTGRES_USER" -d "$POSTGRES_DB"
            initialDelaySeconds: 5
            periodSeconds: 5

      volumes:
        - name: postgres-data
          hostPath:
            path: /var/lib/pc-builder/postgres
            type: DirectoryOrCreate
