k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: pc-builder
  namespace: pc-builder

spec:
  type: NodePort

  selector:
    app: pc-builder

  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
